[package]
name = "AudioWarp"
version = "2.0.0-wip"
edition = "2021"

[dependencies]
# terminal output
ratatui = "0.22"
crossterm = "0.27"
console = "0.15"
dialoguer = { version = "0.10", default-features = false }

# multi-threading util
crossbeam = "0.8"

# general util
anyhow = "1"
lazy_static = "1"
static-toml = "1"

# async runtime handling
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# discord via twilight
twilight-gateway = "0.15"
twilight-http = "0.15"
twilight-model = "0.15"

# audio handling
cpal = "0.15"
symphonia = "0.5"

[dependencies.songbird]
version = "0.3"
default-features = false
git = "https://github.com/serenity-rs/songbird.git"
rev = "efe2a0b6d5d0e01685334c0cac05bb4bbbf0c32d"
features = ["driver", "gateway", "twilight", "rustls"]
